fix: Finished credentials CRUD
